feat: enable unsafe memory backend for lwjgl
See: https://github.com/LWJGL/lwjgl3/issues/1111#issuecomment-4597101927